--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,15 +1,8 @@
 {
-    "builds":[
+    "rewrites": [
         {
-            "src":"./server/server.js",
-            "use":"@vercel/node"
-        }
-
-    ],
-    "routes":[
-        {
-            "src":"/(.*)",
-            "dest":"/"
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
