--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,8 +1,27 @@
 {
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/index.html"
+    "version": 2,
+    "builds": [
+      {
+        "src": "client/package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "client/dist"
         }
+      },
+      {
+        "src": "server/**/*.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/api/(.*)",
+        "dest": "/server/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/client/$1"
+      }
     ]
-}
+  }
+  
