--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,16 +1,12 @@
 {
     "version":2,
-    "builds":[
-        {
-            "src":"*.js",
-            "use":"@vercel/node"
-        }
-
+    "builds": [
+      { "src": "*.js", "use": "@vercel/node" }
     ],
-    "routes":[
+    "routes": [
         {
-            "src":"/(.*)",
-            "dest":"/"
+          "src": "/(.*)",
+          "dest": "/"
         }
-    ]   
-}
+    ]
+  }
